# coffee_aggregator

./: README.md  coffeein_crawler.py  coffein_metadata.json  data_models.py  metadata.py  metadata_set.pkl  pyproject.toml
src/: app.py
src/assets/: constants.py
src/crawlers/: base_crawler.py  coffeein_crawler.py  crawler_factory.py  crawler_interface.py
src/database/: db_interface.py  supabase_db.py
src/errors/: crawler_error.py
src/factory/: crawler_factory.py  processor_factory.py
src/models/: coffe.py  coffee.py  metadata.py  page.py  variety.py
src/processors/: base_processor.py  coffein_processor.py
