[project]
name = "coffee-aggregator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "postgrest>=0.19.3",
    "requests>=2.32.3",
    "ruff>=0.9.9",
    "supabase>=2.13.0",
    "unicode>=2.9",
    "unidecode>=1.3.8",
]
